Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI717NET.VB


    Private Class BTI717_32
        Public Declare Function BTI717_ChClear Lib "BTI717.DLL" Alias "_BTI717_ChClear@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChConfig Lib "BTI717.DLL" Alias "_BTI717_ChConfig@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI717_ChGetCount Lib "BTI717.DLL" Alias "_BTI717_ChGetCount@12" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_ChGetInfo Lib "BTI717.DLL" Alias "_BTI717_ChGetInfo@12" (ByVal infotype As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_ChIs717 Lib "BTI717.DLL" Alias "_BTI717_ChIs717@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsBiPhase Lib "BTI717.DLL" Alias "_BTI717_ChIsBiPhase@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsRcv Lib "BTI717.DLL" Alias "_BTI717_ChIsRcv@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsSelEnc Lib "BTI717.DLL" Alias "_BTI717_ChIsSelEnc@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsType Lib "BTI717.DLL" Alias "_BTI717_ChIsType@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsXmt Lib "BTI717.DLL" Alias "_BTI717_ChIsXmt@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI717_ChPause Lib "BTI717.DLL" Alias "_BTI717_ChPause@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_ChPauseCheck Lib "BTI717.DLL" Alias "_BTI717_ChPauseCheck@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI717_ChResume Lib "BTI717.DLL" Alias "_BTI717_ChResume@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_ChStart Lib "BTI717.DLL" Alias "_BTI717_ChStart@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChStatus Lib "BTI717.DLL" Alias "_BTI717_ChStatus@12" (ByVal buf As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChStop Lib "BTI717.DLL" Alias "_BTI717_ChStop@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChSyncDefine Lib "BTI717.DLL" Alias "_BTI717_ChSyncDefine@20" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChTriggerDefine Lib "BTI717.DLL" Alias "_BTI717_ChTriggerDefine@24" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ParamAmplitudeConfig Lib "BTI717.DLL" Alias "_BTI717_ParamAmplitudeConfig@16" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ParamAmplitudeGet Lib "BTI717.DLL" Alias "_BTI717_ParamAmplitudeGet@12" (ByRef dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmBlkRd Lib "BTI717.DLL" Alias "_BTI717_SubFrmBlkRd@16" (ByVal databuf As UInt16(), ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmBlkWr Lib "BTI717.DLL" Alias "_BTI717_SubFrmBlkWr@16" (ByVal databuf As UInt16(), ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmStatus Lib "BTI717.DLL" Alias "_BTI717_SubFrmStatus@16" (ByVal buf As UInt16(), ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmSyncDefine Lib "BTI717.DLL" Alias "_BTI717_SubFrmSyncDefine@24" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmTriggerDefine Lib "BTI717.DLL" Alias "_BTI717_SubFrmTriggerDefine@28" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmWordConfig Lib "BTI717.DLL" Alias "_BTI717_SubFrmWordConfig@20" (ByVal configval As UInt32, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmWordRd Lib "BTI717.DLL" Alias "_BTI717_SubFrmWordRd@20" (ByRef value As UInt16, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmWordWr Lib "BTI717.DLL" Alias "_BTI717_SubFrmWordWr@20" (ByVal value As UInt16, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmConfig Lib "BTI717.DLL" Alias "_BTI717_SuperFrmConfig@16" (ByVal count As Int32, ByVal framespersuperframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmCounterPos Lib "BTI717.DLL" Alias "_BTI717_SuperFrmCounterPos@16" (ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmCounterPosEx Lib "BTI717.DLL" Alias "_BTI717_SuperFrmCounterPosEx@24" (ByVal subframe As Int32, ByVal word As Int32, ByVal msb As Int32, ByVal lsb As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmDefine Lib "BTI717.DLL" Alias "_BTI717_SuperFrmDefine@16" (ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_SuperFrmWordConfig Lib "BTI717.DLL" Alias "_BTI717_SuperFrmWordConfig@20" (ByVal configval As UInt32, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmWordRd Lib "BTI717.DLL" Alias "_BTI717_SuperFrmWordRd@20" (ByRef value As UInt16, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmWordWr Lib "BTI717.DLL" Alias "_BTI717_SuperFrmWordWr@20" (ByVal value As UInt16, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncTest Lib "BTI717.DLL" Alias "_BTI717_SyncTest@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncValRd Lib "BTI717.DLL" Alias "_BTI717_SyncValRd@24" (ByRef syncword1 As Int32, ByRef syncword2 As Int32, ByRef syncword3 As Int32, ByRef syncword4 As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncValWr Lib "BTI717.DLL" Alias "_BTI717_SyncValWr@24" (ByVal syncword1 As Int32, ByVal syncword2 As Int32, ByVal syncword3 As Int32, ByVal syncword4 As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChCreate Lib "BTI717.DLL" Alias "_BTI717_ChCreate@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_ChReset Lib "BTI717.DLL" Alias "_BTI717_ChReset@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_DllUsageCount Lib "BTI717.DLL" Alias "_BTI717_DllUsageCount@0" () As Int32
        Public Declare Sub BTI717_GetChanCount Lib "BTI717.DLL" Alias "_BTI717_GetChanCount@12" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_IsBiPhaseChan Lib "BTI717.DLL" Alias "_BTI717_IsBiPhaseChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_IsChan Lib "BTI717.DLL" Alias "_BTI717_IsChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_IsRcvChan Lib "BTI717.DLL" Alias "_BTI717_IsRcvChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_IsXmtChan Lib "BTI717.DLL" Alias "_BTI717_IsXmtChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmAddr Lib "BTI717.DLL" Alias "_BTI717_SubFrmAddr@12" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_SubFrmBlkRdEx Lib "BTI717.DLL" Alias "_BTI717_SubFrmBlkRdEx@16" (ByRef subfrmdata As SUBFRMFIELDS717, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmBlkWrEx Lib "BTI717.DLL" Alias "_BTI717_SubFrmBlkWrEx@16" (ByRef subfrmdata As SUBFRMFIELDS717, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmCreate Lib "BTI717.DLL" Alias "_BTI717_SubFrmCreate@16" (ByVal configval As UInt32, ByVal subframe As Int32, ByVal chanbase As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmReset Lib "BTI717.DLL" Alias "_BTI717_SubFrmReset@12" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmBaseAddr Lib "BTI717.DLL" Alias "_BTI717_SuperFrmBaseAddr@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_SuperFrmConfigEx Lib "BTI717.DLL" Alias "_BTI717_SuperFrmConfigEx@20" (ByVal configval As UInt32, ByVal count As Int32, ByVal framespersuperframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmReset Lib "BTI717.DLL" Alias "_BTI717_SuperFrmReset@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncValPtrInit Lib "BTI717.DLL" Alias "_BTI717_SyncValPtrInit@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_TestProtocol Lib "BTI717.DLL" Alias "_BTI717_TestProtocol@4" (ByVal handleval As IntPtr) As Int32
    End Class
